welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:16: error: not found: value nombre_occurences
      													 nombre_occurences = nombre +1;
                                                                                                         ^